src/objects/NPSP_Field_History__c.object
<CustomObject>
    <description>TEMPORARY OBJECT TO TRACK FIELD HISTORY ON ALL FIELDS FOR A GIVEN OBJECT</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TEMP Custom Field History</relationshipLabel>
        <relationshipName>Field_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TEMP Custom Field History</relationshipLabel>
        <relationshipName>Field_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <formula>TEXT(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Field History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>New_Value__c</columns>
        <columns>Old_Value__c</columns>
        <columns>Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>H{0000000000}</displayFormat>
        <label>RecordNum</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>